TESTE DE REPOSITORIO

--- a/exercicios/ex009/index009.html
+++ b/exercicios/ex009/index009.html
@@ -16,6 +16,8 @@
          <li>Tomar banho</li>
          <li>Ir pra esolar</li>
          <li>Jantar</li>
+         <li>Dormir</li>         
+         <li>Jantar</li>
          <li>Dormir</li>
       
      </ol>     
