Correção Margin e Padding

--- a/exercicios/desafio10/android.html
+++ b/exercicios/desafio10/android.html
@@ -16,8 +16,8 @@
         <nav>
             <a href="">HOME</a>
             <a href="">NOTICIAS</a>
-            <a href="">CURIOSIDADES</a>
-            <a href="">FALE CONOSCO</a>
+        
+            <a href="">CONTATO</a>
         </nav>
     
         <main>
