--- a/exercicios/desafio10/android.html
+++ b/exercicios/desafio10/android.html
@@ -74,11 +74,16 @@
                 escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo,
                 objetivo.</p>
 
-            <div class="video"><iframe width="560" height="315"
-                    src="https://www.youtube.com/embed/l2UDgpLz20M?si=58_GyZwMC4V8vSiG" title="YouTube video player"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe></div>
+            <div class="video"><video autoplay muted loop style="width: 100%;">
+                    <source
+                        src="https://www.redbull.com/energydrink/v1/resources/contentful/videos/lcr8qbvxj7mh/58uubJ5sIRRYwY4FzVW3Sk/98d33e8c32271d3daca9353e324fbc83/30s_clip_v3_webready_crf25.mp4"
+                        type="video/mp4">
+                    Seu navegador não suporta o elemento de vídeo.
+                </video>
+
+
+
+            </div>
 
             <aside>
                 <h3>Quer aprender mais?</h3>
